[package]
name = "dslab-scheduling"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]

dslab-core = { path = "../dslab-core" }
dslab-compute = {path = "../dslab-compute" }
serde = { version = "1.0", features = ["derive"] }
sugars = "3.0.0"
log = "0.4.14"
env_logger = "0.9.0"
